- increased performance in SCIPcliqueAddVar(), adding a variable to a clique
- tighten primal and dual feasibility tolerances independently if they are not reached in LP solving
- when all nonlinearities have been fixed and the number of nonfixed variables is 1 in cons_nonlinear/cons_quadratic/
  cons_bivariate, handle it by a bound change instead of adding a linear constraint

plugins:
- added new presolver convertinttobin, which converts bounded integer variables to their binary representation, e.g.
  for integer variable 0 <= x <= 10 the binary variables y0, y1, y2, and y3 are created, such that
  1 y0 + 2 y1 + 4 y2 + 8 y3 <= 10 and x = 1 y0 + 2 y1 + 4 y2 + 8 y3
- added nlpdiving heuristic that comprises several civing heuristics using an NLP relaxation
- added new presolver gateextraction, which tries to find and-gates/constraints which are linearized
  e.g. (x + y + z >= 1, x + y <= 1 and x + z <= 1 => x == AND(~y,~z)), in special cases it also detects set-partitioning
  constraints e.g. (x + y + z >= 1, x + y <= 1, x + z <= 1 and y + z <= 1 => x + y + z == 1));
  gate-extractor is also able to detect logicor constraints and set-packing/-partitioning constraints with the same
  variables, to upgrade these both constraints to a set-partitioning constraint
- added reader for MI(NL)Ps in OSiL (Optimization Services Instance Language) format
- added new presolver components, that searches for independent components in the problem structure and solves
  these components as sub-SCIPs when they are small enough (per default <= 20 discrete variables, nodelimit of 10000)
- added new presolver domcol that looks for dominated columns in a MIP and tries to fix them
- added zeroobj heuristic that solves a copy of the problem without an objective function and with quite strict limits
  on the number of nodes and LP iterations
- complete reworking of the vbounds propagator: it now takes into account variable bounds, cliques, and implications,