@@ -807,7 +807,7 @@ SCIP_DECL_HEUREXEC(heurExecClique)
       if( heurdata->copycuts )
       {
          /** copies all active cuts from cutpool of sourcescip to linear constraints in targetscip */
-         SCIP_CALL( SCIPcopyCuts(scip, subscip, varmap, NULL, FALSE) );
+         SCIP_CALL( SCIPcopyCuts(scip, subscip, varmap, NULL, FALSE, NULL) );
       }
 
       for( i = 0; i < nvars; i++ )
