@@ -457,7 +457,7 @@ SCIP_DECL_HEUREXEC(heurExecLocalbranching)
       if( heurdata->copycuts )
       {
          /** copies all active cuts from cutpool of sourcescip to linear constraints in targetscip */
-         SCIP_CALL( SCIPcopyCuts(scip, subscip, varmapfw, NULL, TRUE) );
+         SCIP_CALL( SCIPcopyCuts(scip, subscip, varmapfw, NULL, TRUE, NULL) );
       }
    }
    SCIPdebugMessage("Copying the plugins was %ssuccessful.\n", success ? "" : "not ");
