@@ -699,7 +699,7 @@ SCIP_RETCODE applyVbounds(
       if( heurdata->copycuts )
       {
          /** copies all active cuts from cutpool of sourcescip to linear constraints in targetscip */
-         SCIP_CALL( SCIPcopyCuts(scip, subscip, varmap, NULL, FALSE) );
+         SCIP_CALL( SCIPcopyCuts(scip, subscip, varmap, NULL, FALSE, NULL) );
       }
 
       SCIP_CALL( SCIPallocBufferArray(scip, &subvars, nvars) );
